--- a/site_works/Style.css
+++ b/site_works/Style.css
@@ -41,3 +41,9 @@ table, th, td {border: 1px solid black;}
 	padding:		10px 20px !important;
 	font-family:Bitter;
 	font-size:1.1em;}
+
+div {background-color: #78AB46;
+	border:2px solid black;
+	padding: 5px;
+	position:absolute;
+	left: 38%;}
